# crawlback

./: .env.example  .gitignore  README.md  pyproject.toml
configs/: competitors.yml  extraction.yml
dbt/: dbt_project.yml  profiles.yml.example
dbt/models/: sources.yml
dbt/models/marts/: dim_companies.sql  fct_backlink_opportunities.sql  fct_backlinks.sql  mart_company_backlink_summary.sql  mart_competitor_overlap.sql  schema.yml
dbt/models/staging/: schema.yml  stg_companies.sql  stg_domain_edges.sql  stg_domain_ranks.sql  stg_wat_link_evidence.sql
dbt/seeds/: companies.csv  schema.yml
omni/: model  relationships
omni/topics/: backlink_opportunities.topic  company_backlink_summary.topic  competitor_overlap.topic
omni/views/: dim_companies.view  fct_backlink_opportunities.view  fct_backlinks.view  mart_company_backlink_summary.view  mart_competitor_overlap.view
scripts/: extract_graph.py  load_graph.py
src/crawlback/: __init__.py  common_crawl.py  config.py  graph_etl.py  graph_extract.py  models.py  motherduck.py  normalize_domains.py  raw_etl.py
tests/: test_common_crawl.py  test_config.py  test_graph_etl.py  test_graph_extract.py  test_models.py  test_motherduck.py  test_normalize_domains.py  test_raw_etl.py
