[project]
name = "crawlback"
version = "0.1.0"
description = "Backlink intelligence pipeline for Omni's Growth Marketing team."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.1.0,<1.5.3",
    "pydantic>=2.10.0",
    "pyyaml>=6.0.2",
    "tldextract>=5.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "dbt-core>=1.9.0",
    "dbt-duckdb>=1.9.0",
    "mypy>=1.14.0",
    "pytest>=8.3.0",
    "ruff>=0.8.0",
    "types-pyyaml>=6.0.12.20240917",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src", "tests", "scripts"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
